# design_workshop

./: README.md  app.py  pyproject.toml  requirements.txt
src/: chunking.py
tests/: test_chunking.py
